--- a/Tools For Data Science/1-notebook.ipynb
+++ b/Tools For Data Science/1-notebook.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b05400a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "d31477da",
    "metadata": {},
@@ -16,6 +24,14 @@
     "## Quoc Hung Nguyen\n",
     "## Data Scienctist"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cb488c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -156,12 +172,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a54d4f7",
+   "cell_type": "markdown",
+   "id": "f93ca646",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Objectives\n",
+    "## Create Markdown cells\n",
+    "## Create Add description\n",
+    "## Create Coding cells\n",
+    "## Display Results of code\n",
+    "## Author Details : Quoc Hung Nguyen"
+   ]
   }
  ],
  "metadata": {
